--- a/index.html
+++ b/index.html
@@ -34,25 +34,53 @@
 					Inscrição
 				</span>
 
-				<div class="wrap-input1 validate-input" data-validate = "Name is required">
-					<input class="input1" type="text" name="name" placeholder="Name">
+				<div class="wrap-input1 validate-input">
+					<input class="input1" type="text" placeholder="Nome">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-					<input class="input1" type="text" name="email" placeholder="Email">
+				<div class="wrap-input1 validate-input">
+					<input class="input1" type="text" placeholder="Whatsapp">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Subject is required">
-					<input class="input1" type="text" name="subject" placeholder="Subject">
+				<div  class="wrap-input1 validate-input">
+					<select class="input1" name="" id="">
+						<option value="" hidden>Igreja</option>
+						<option value="">Padre Andrade</option>
+						<option value="">Jardim Iracema II</option>
+						<option value="">Floresta</option>
+						<option value="">Barra I</option>
+						<option value="">Barra II</option>
+						<option value="">Tirol</option>
+					</select>
+				</div>
+
+				<div  class="wrap-input1 validate-input">
+					<select class="input1" name="" id="">
+						<option value="" hidden>Tem DEBQ?</option>
+						<option value="">Sim</option>
+						<option value="">Não</option>
+					</select>
+				</div>
+
+				<div  class="wrap-input1 validate-input">
+					<select class="input1" name="" id="">
+						<option value="" hidden>É o Responsável?</option>
+						<option value="">Sim</option>
+						<option value="">Não</option>
+					</select>
+				</div>
+
+				<div class="wrap-input1 validate-input"	>
+					<input class="input1" type="text" name="name" placeholder="Nome e Telefone do Responsável">
 					<span class="shadow-input1"></span>
 				</div>
 
 				<div class="container-contact1-form-btn">
 					<button class="contact1-form-btn">
 						<span>
-							Send Email
+							Salvar
 							<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
 						</span>
 					</button>
